Squash a few bugs

--- a/src/views/UpdatesFeed/FeaturedUpdate/FeaturedUpdate.scss
+++ b/src/views/UpdatesFeed/FeaturedUpdate/FeaturedUpdate.scss
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100%;
     z-index: auto;
-    filter: brightness(0.6);
+    filter: brightness(0.4);
   }
 
   .update_text {
